# agentic-kanban

./: .dockerignore  .gitignore  .goreleaser.yaml  .kanban.toml  Dockerfile  README.md  compose.yaml  docker-bake.hcl  go.mod  go.sum  hatch_build.py  main.go  pyproject.toml
.claude/: settings.local.json
.devcontainer/: Dockerfile  README.md  devcontainer.json  init-firewall.sh
.github/workflows/: release.yml
cmd/server/: main.go
internal/api/: api.go  api_embed_test.go  api_test.go  contract_test.go  events.go  handlers.go  helpers_test.go  mergeconfig.go
internal/config/: config.go
internal/db/: db.go  queries.go  schema.sql  types.go
internal/docker/: client.go  devcontainer.go  devcontainer_test.go  network.go  proxy.go
internal/git/: worktree.go
internal/github/: poller.go  poller_test.go
internal/harness/: config.go  harness.go
internal/hooks/: hooks.go
internal/kanbantoml/: kanbantoml.go  kanbantoml_test.go
internal/session/: broker.go  broker_test.go  claude_settings.go  manager.go  pty.go
internal/tasks/: runner.go
web/: index.html  package-lock.json  package.json  static.go  static_embed.go  vite.config.ts
web/src/: App.tsx  index.css  main.tsx  toast.tsx
web/src/api/: client.ts
web/src/components/: AppSettings.tsx  ArchivedDrawer.tsx  Board.tsx  BoardSettings.tsx  Button.tsx  Column.tsx  CreateBoardForm.tsx  PendingButton.tsx  PtyTerminal.tsx  SessionPane.tsx  TasksPanel.tsx  Ticket.tsx
